fix(backend): login successfully with jwt token